updated to 4.0.3 version

--- a/stylus/font-awesome.styl
+++ b/stylus/font-awesome.styl
@@ -26,7 +26,7 @@
 
 @import "variables"
 @import "mixins"
-@import "path"
+// @import "path"
 @import "core"
 @import "larger"
 @import "fixed-width"
