Restore the FontAwesome font-face declaration
Now that importing `path.styl` no longer results in a parsing error, it can be
safely included in the initialization process once again.

--- a/stylus/font-awesome.styl
+++ b/stylus/font-awesome.styl
@@ -6,7 +6,7 @@
 @import "nib"
 @import "variables"
 @import "mixins"
-// @import "path"
+@import "path"
 @import "core"
 @import "larger"
 @import "fixed-width"
