--- a/stylus/core.styl
+++ b/stylus/core.styl
@@ -9,3 +9,4 @@
   line-height 1
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing grayscale
+  transform translate(0, 0) // ensures no half-pixel rendering in firefox
