--- a/stylus/spinning.styl
+++ b/stylus/spinning.styl
@@ -2,10 +2,13 @@
 // --------------------------
 
 .{$fa-css-prefix}-spin
+	-webkit-animation spin 2s infinite linear
 	animation spin 2s infinite linear
 
 @keyframes spin
 	0%
+		-webkit-transform rotate(0deg)
 		transform rotate(0deg)
 	100%
+		-webkit-transform rotate(359deg)
 		transform rotate(359deg)
