--- a/stylus/list.styl
+++ b/stylus/list.styl
@@ -10,9 +10,9 @@
 
 .{$fa-css-prefix}-li
   position absolute
-  left -($fa-li-width)
+  left -$fa-li-width
   width $fa-li-width
   top (2em / 14)
   text-align center
   &.{$fa-css-prefix}-lg
-    left -($fa-li-width) + (4em / 14)
+    left -$fa-li-width + (4em / 14)
