--- a/stylus/icons.styl
+++ b/stylus/icons.styl
@@ -1359,3 +1359,9 @@
   content: $fa-var-yoast
 .{$fa-css-prefix}-themeisle:before
   content: $fa-var-themeisle
+.{$fa-css-prefix}-google-plus-circle:before,
+.{$fa-css-prefix}-google-plus-official:before
+  content: $fa-var-google-plus-official
+.{$fa-css-prefix}-fa:before,
+.{$fa-css-prefix}-font-awesome:before
+  content: $fa-var-font-awesome
