--- a/example/src/styles.styl
+++ b/example/src/styles.styl
@@ -1,7 +1,7 @@
 // $fa-font-path ?= "../fonts"
 $fa-font-path ?= "http://netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts" // for referencing Bootstrap CDN font files directly
 
-@import "../../stylus/index"
+@import "../../index"
 
 .fa
   font-size 100px
