--- a/recipes/webpack-2/test.styl
+++ b/recipes/webpack-2/test.styl
@@ -1,12 +1,9 @@
 // Set font path
-
-// $fa-font-path = "~font-awesome-stylus/fonts"
-$fa-font-path = "../../fonts"
+$fa-font-path = "~font-awesome-stylus/fonts"
+// $fa-font-path = "../../fonts"
 
 // Import font-awesome-stylus
-
-// @import "~font-awesome-stylus/index"
-@import "../../index"
+@import "~font-awesome-stylus/index"
 
 body
   color black
